# WasmEngine

./: .gitignore  Cargo.toml  Makefile  README.en.md  README.md  WasmEngine.spec  apply-patches  build.rs  gen-version.sh  git-commit  series.conf
benches/: README.md  authentication.wat  benchmark.rs  echo_string.wat
docs/: README.md
examples/: README.md
experiments/application/add_one/: Cargo.toml
experiments/application/authentication/: Cargo.toml
experiments/application/authentication-wasi/: Cargo.toml
experiments/application/authentication-wasi/src/: main.rs
experiments/application/authentication/src/: lib.rs
experiments/application/echo-string/: Cargo.toml
experiments/application/echo-string/src/: lib.rs
experiments/application/fibonacci/src/: main.rs
experiments/application/hello/src/: main.rs
experiments/bash_libraries/: percentiles_table.sh
experiments/concurrency/: dockerfile  run-wasm-engine.sh  run.sh  throughput.gnuplot
experiments/pyplot/: latency.py  line_chart.py  throughput.py
patch/: 0001-add-experiments-to-tar.patch  0002-add-another_json_minimal-to-vendor.patch  0003-remove-unused-code-and-comments.patch  0004-pull_wasm-return-result-do-not-panic.patch  0005-wasmengine-could-pull-public-https-repository-image.patch  0006-wasi-use-json-as-args-for-consistent-wasm-function-i.patch  0007-integration-test-init-for-wasmengine.patch  0008-typo-fix.patch
src/: lib.rs  main.rs
src/function_store/: local_store.rs  mod.rs  module_store.rs  pull.rs
src/wrapper/: config.rs  environment.rs  mod.rs  wasmtime_runtime.rs
tests/: README.md  authentication-wasi.wasm  authentication.wasm  store.rs  wasmtime.rs
