[package]
name = "wasm_engine"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
lazy_static = "1.4"
anyhow = "1.0.44"
tracing = "0.1"
tracing-subscriber = {version = "0.3.14", features = ["env-filter"] }
semver = "^1.0"
wasmtime = "0.30.0"
wasmtime-wasi = { version= "0.30.0", features = ["tokio"]}
wasi-common = "0.30.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
indexmap = "1.7.0"
percent-encoding = "2.1.0"
clap = { version = "3.2.6", features = ["derive"] }
toml = "0.5.9"
flate2 = "1.0"
oci-distribution = "0.9.2"
tar = "0.4"
http = "0.2.8"


[build-dependencies]
anyhow = "1.0.44"

[dev-dependencies]
criterion = "0.3"
another_json_minimal = "0.0.2"


[[bench]]
name = "benchmark"
harness = false
